src/token/snapshots/hebi4__token__tests__floats.snap
---
source: src/token/tests.rs
expression: tokenize(&input)
---
[
    Var("var", 0..3),
    Ident("one", 4..7),
    Eq("=", 8..9),
    Float("1.0", 10..13),
    Var("var", 14..17),
    Ident("pi", 18..20),
    Eq("=", 21..22),
    Float("3.14", 23..27),
    Var("var", 28..31),
    Ident("exp", 32..35),
    Eq("=", 36..37),
    Float("2e10", 38..42),
    Var("var", 43..46),
    Ident("n_exp", 47..52),
    Eq("=", 53..54),
    Float("2e-10", 55..60),
]
