src/token/snapshots/hebi4__token__tests__function_body.snap
---
source: src/token/tests.rs
expression: tokenize(&input)
---
[
    Fn("fn", 0..2),
    Ident("test", 3..7),
    ParenL("(", 7..8),
    ParenR(")", 8..9),
    Do("do", 10..12),
    Integer("1", 17..18),
    Plus("+", 19..20),
    Integer("1", 21..22),
    End("end", 23..26),
    Fn("fn", 28..30),
    Ident("test", 31..35),
    ParenL("(", 35..36),
    Ident("a", 36..37),
    Comma(",", 37..38),
    Ident("b", 39..40),
    Comma(",", 40..41),
    Ident("c", 42..43),
    ParenR(")", 43..44),
    Do("do", 45..47),
    Integer("1", 52..53),
    Plus("+", 54..55),
    Integer("1", 56..57),
    End("end", 58..61),
    Fn("fn", 63..65),
    Ident("test", 66..70),
    ParenL("(", 70..71),
    Ident("a", 71..72),
    Comma(",", 72..73),
    Ident("b", 74..75),
    Comma(",", 75..76),
    Ident("c", 77..78),
    Comma(",", 78..79),
    ParenR(")", 80..81),
    Do("do", 82..84),
    Integer("1", 89..90),
    Plus("+", 91..92),
    Integer("1", 93..94),
    End("end", 95..98),
]
