src/token/snapshots/hebi4__token__tests__logic.snap
---
source: src/token/tests.rs
expression: tokenize(&input)
---
[
    True("true", 0..4),
    Or("or", 5..7),
    False("false", 8..13),
    And("and", 14..17),
    True("true", 18..22),
    Or("or", 23..25),
    False("false", 26..31),
    Var("var", 33..36),
    Ident("b", 37..38),
    Eq("=", 39..40),
    ParenL("(", 41..42),
    ParenL("(", 42..43),
    True("true", 43..47),
    Or("or", 48..50),
    ParenL("(", 51..52),
    False("false", 52..57),
    And("and", 58..61),
    True("true", 62..66),
    ParenR(")", 66..67),
    ParenR(")", 67..68),
    Or("or", 69..71),
    False("false", 72..77),
    ParenR(")", 77..78),
    Var("var", 80..83),
    Ident("c", 84..85),
    Eq("=", 86..87),
    Not("not", 88..91),
    True("true", 92..96),
    And("and", 97..100),
    Not("not", 101..104),
    False("false", 105..110),
]
