src/token/snapshots/hebi4__token__tests__loops.snap
---
source: src/token/tests.rs
expression: tokenize(&input)
---
[
    Loop("loop", 0..4),
    Continue("continue", 9..17),
    Break("break", 22..27),
    End("end", 28..31),
]
