src/token/snapshots/hebi4__token__tests__object.snap
---
source: src/token/tests.rs
expression: tokenize(&input)
---
[
    Var("var", 0..3),
    Ident("empty", 4..9),
    Eq("=", 10..11),
    BraceL("{", 12..13),
    BraceR("}", 13..14),
    Var("var", 16..19),
    Ident("single_arg", 20..30),
    Eq("=", 31..32),
    BraceL("{", 33..34),
    Ident("a", 34..35),
    Eq("=", 35..36),
    Ident("b", 36..37),
    BraceR("}", 37..38),
    Var("var", 39..42),
    Ident("single_arg_tc", 43..56),
    Eq("=", 57..58),
    BraceL("{", 59..60),
    Ident("a", 60..61),
    Eq("=", 61..62),
    Ident("b", 62..63),
    Comma(",", 63..64),
    BraceR("}", 64..65),
    Var("var", 67..70),
    Ident("multi_arg", 71..80),
    Eq("=", 81..82),
    BraceL("{", 83..84),
    Ident("a", 84..85),
    Eq("=", 85..86),
    Integer("0", 86..87),
    Comma(",", 87..88),
    Ident("b", 89..90),
    Eq("=", 90..91),
    Integer("1", 91..92),
    BraceR("}", 92..93),
    Var("var", 94..97),
    Ident("multi_arg_tc", 98..110),
    Eq("=", 111..112),
    BraceL("{", 113..114),
    Ident("a", 114..115),
    Eq("=", 115..116),
    Integer("0", 116..117),
    Comma(",", 117..118),
    Ident("b", 119..120),
    Eq("=", 120..121),
    Integer("1", 121..122),
    Comma(",", 122..123),
    BraceR("}", 123..124),
    Var("var", 126..129),
    Ident("single_arg_inline", 130..147),
    Eq("=", 148..149),
    BraceL("{", 150..151),
    Ident("a", 151..152),
    BraceR("}", 152..153),
    Var("var", 154..157),
    Ident("single_arg_inline_tc", 158..178),
    Eq("=", 179..180),
    BraceL("{", 181..182),
    Ident("a", 182..183),
    Comma(",", 183..184),
    BraceR("}", 184..185),
    Var("var", 187..190),
    Ident("multi_arg_mixed", 191..206),
    Eq("=", 207..208),
    BraceL("{", 209..210),
    Ident("a", 210..211),
    Eq("=", 211..212),
    Integer("0", 212..213),
    Comma(",", 213..214),
    Ident("b", 215..216),
    BraceR("}", 216..217),
    Var("var", 218..221),
    Ident("multi_arg_mixed_tc", 222..240),
    Eq("=", 241..242),
    BraceL("{", 243..244),
    Ident("a", 244..245),
    Eq("=", 245..246),
    Integer("0", 246..247),
    Comma(",", 247..248),
    Ident("b", 249..250),
    Comma(",", 250..251),
    BraceR("}", 251..252),
    Var("var", 254..257),
    Ident("multi_arg_mixed2", 258..274),
    Eq("=", 275..276),
    BraceL("{", 277..278),
    Ident("a", 278..279),
    Comma(",", 279..280),
    Ident("b", 281..282),
    Eq("=", 282..283),
    Integer("0", 283..284),
    BraceR("}", 284..285),
    Var("var", 286..289),
    Ident("multi_arg_mixed2_tc", 290..309),
    Eq("=", 310..311),
    BraceL("{", 312..313),
    Ident("a", 313..314),
    Comma(",", 314..315),
    Ident("b", 316..317),
    Eq("=", 317..318),
    Integer("0", 318..319),
    Comma(",", 319..320),
    BraceR("}", 320..321),
    Var("var", 323..326),
    Ident("string_key", 327..337),
    Eq("=", 338..339),
    BraceL("{", 340..341),
    String("\"a\"", 341..344),
    Eq("=", 344..345),
    Integer("0", 345..346),
    BraceR("}", 346..347),
    Var("var", 348..351),
    Ident("string_key_tc", 352..365),
    Eq("=", 366..367),
    BraceL("{", 368..369),
    String("\"a\"", 369..372),
    Eq("=", 372..373),
    Integer("0", 373..374),
    Comma(",", 374..375),
    BraceR("}", 375..376),
    Var("var", 378..381),
    Ident("string_key_multi", 382..398),
    Eq("=", 399..400),
    BraceL("{", 401..402),
    String("\"a\"", 402..405),
    Eq("=", 405..406),
    Integer("0", 406..407),
    Comma(",", 407..408),
    String("\"b\"", 409..412),
    Eq("=", 412..413),
    Integer("1", 413..414),
    BraceR("}", 414..415),
    Var("var", 416..419),
    Ident("string_key_multi_tc", 420..439),
    Eq("=", 440..441),
    BraceL("{", 442..443),
    String("\"a\"", 443..446),
    Eq("=", 446..447),
    Integer("0", 447..448),
    Comma(",", 448..449),
    String("\"b\"", 450..453),
    Eq("=", 453..454),
    Integer("1", 454..455),
    Comma(",", 455..456),
    BraceR("}", 456..457),
]
