src/token/snapshots/hebi4__token__tests__top_level_if.snap
---
source: src/token/tests.rs
expression: tokenize(&input)
---
[
    If("if", 0..2),
    True("true", 3..7),
    Do("do", 8..10),
    Integer("0", 13..14),
    End("end", 15..18),
    If("if", 20..22),
    False("false", 23..28),
    Do("do", 29..31),
    Integer("0", 34..35),
    Else("else", 36..40),
    Integer("1", 43..44),
    End("end", 45..48),
    If("if", 50..52),
    True("true", 53..57),
    Do("do", 58..60),
    Integer("0", 63..64),
    Else("else", 65..69),
    If("if", 70..72),
    False("false", 73..78),
    Do("do", 79..81),
    Integer("1", 84..85),
    End("end", 86..89),
    If("if", 91..93),
    False("false", 94..99),
    Do("do", 100..102),
    Integer("0", 105..106),
    Else("else", 107..111),
    If("if", 112..114),
    True("true", 115..119),
    Do("do", 120..122),
    Integer("1", 125..126),
    Else("else", 127..131),
    Integer("2", 134..135),
    End("end", 136..139),
]
