src/token/snapshots/hebi4__token__tests__valid_tokens.snap
---
source: src/token/tests.rs
expression: tokenize(&input)
---
[
    Var("var", 12..15),
    Fn("fn", 16..18),
    Do("do", 19..21),
    Loop("loop", 22..26),
    End("end", 27..30),
    Return("return", 31..37),
    Break("break", 38..43),
    Continue("continue", 44..52),
    If("if", 53..55),
    Else("else", 56..60),
    ParenL("(", 62..63),
    BraceL("{", 63..64),
    BracketL("[", 64..65),
    BracketR("]", 65..66),
    BraceR("}", 66..67),
    ParenR(")", 67..68),
    Dot(".", 70..71),
    Comma(",", 71..72),
    Eq("=", 74..75),
    PlusEq("+=", 76..78),
    MinusEq("-=", 79..81),
    StarEq("*=", 82..84),
    SlashEq("/=", 85..87),
    Plus("+", 88..89),
    Minus("-", 90..91),
    Star("*", 92..93),
    Slash("/", 94..95),
    Or("or", 97..99),
    And("and", 100..103),
    Not("not", 104..107),
    EqEq("==", 109..111),
    NotEq("!=", 112..114),
    Gt(">", 115..116),
    Ge(">=", 117..119),
    Lt("<", 120..121),
    Le("<=", 122..124),
    Ident("_abcdefghijklmnopqrstuvwxyz_ABCDEFGHIJKLMNOPQRSTUVWXYZ_0123456789_", 126..192),
    Integer("0", 194..195),
    Integer("123456789", 196..205),
    Integer("1_0", 206..209),
    Float("0.0", 211..214),
    Float("123456789.123456789", 215..234),
    Float("1e100", 235..240),
    Float("1.1e100", 241..248),
    Float("1.1e-100", 249..257),
    Float("1.1e+100", 258..266),
    String("\"asdf\"", 268..274),
    String("\"\\n\"", 275..279),
    String("\"\\t\"", 280..284),
    String("\"\\x00\"", 285..291),
    String("\"\\u{0000}\"", 292..302),
    String("\"\\\"\"", 304..308),
    True("true", 310..314),
    False("false", 315..320),
    Nil("nil", 321..324),
]
